--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">My Tools</a>
       <ul class="nav navbar-nav">
-          <li class="nav-item">
-              <a class="nav-link" href="#">Mapper</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="Viewer/">Viewer</a>
-          </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Mapper</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="Viewer/">Viewer</a>
+        </li>
       </ul>          
     </nav>    
 
@@ -65,7 +65,7 @@
           </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a id="SelectBackground" class="dropdown-item" data-toggle="modal" data-target="#modal-fileUpload">Select Background</a>
-              <a id="MapSettings" class="dropdown-item" href="#">Map Settings</a>
+              <a id="MapSettings" class="dropdown-item" data-toggle="modal" data-target="#modal-Settings" href="#">Map Settings</a>
             </div>
         </li>
       </ul>
@@ -186,6 +186,81 @@
       </form>
     </div>
 
+    <!-- Settings Modal -->
+    <div class="modal fade" id="modal-Settings" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">Map Settings</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+              <div class="row">                
+                <div class="input-group mb-3">
+                  <div class="input-group-prepend">
+                    <label class="input-group-text">Grid Type:</label>
+                  </div>
+                  <select class="form-control">
+                    <option value="none">None</option>
+                    <option value="square">Squared</option>
+                    <option value="hex">Hexes</option>
+                  </select>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-group mb-3">
+                  <div class="input-group-prepend">
+                    <label class="input-group-text">Grid Size:</label>
+                  </div>
+                  <input type="range" class="custom-range custom-range-modal" min="0" max="400">
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-group mb-3">
+                  <div class="input-group-prepend">
+                    <label class="input-group-text">Grid Offset X:</label>
+                  </div>
+                  <input type="range" class="custom-range custom-range-modal" min="0" max="400">
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-group mb-3">
+                  <div class="input-group-prepend">
+                    <label class="input-group-text">Grid Offset Y:</label>
+                  </div>
+                  <input type="range" class="custom-range custom-range-modal" min="0" max="400">
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-group mb-3">
+                  <div class="input-group-prepend">
+                      <label class="input-group-text">Grid Distance:</label>
+                  </div>
+                  <input type="number" class="form-control" aria-label="Text input with dropdown button">
+                  <div class="input-group-append">
+                    <select class="form-control">
+                      <option value="ft">Foot</option>
+                      <option value="yd">Yard</option>
+                      <option value="m">Meter</option>
+                      <option value="km">Kilometer</option>
+                      <option value="mi">Mile</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- After Definition JS -->
     <script type="text/javascript">      
       new ResizeObserver(CanvasSizeChanged).observe(content);
@@ -201,7 +276,8 @@
     
     <!-- Copy Definitions -->
     <copy style="position:absolute; top:-5000px">
-        <!-- Filename Alert -->
+      
+      <!-- Filename Alert -->
       <div id="alert-FileInfos-Copy" class="alert alert-secondary" role="alert" style="position: absolute; top: 0; left: 40%; width: 20%;">
         <div id="alert-FileInfos-Text"></div>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"style="position: absolute; right: 8px; top: 5px;">
@@ -209,6 +285,7 @@
           </button>
       </div>
 
+      <!-- Map List Item -->
       <a id="map-list-Item-Copy" class="list-group-item list-group-item-action" data-toggle="list" href="#home" role="tab">
         <div class="d-flex w-100 justify-content-between">
           <h5 class="mb-1">Map 2</h5>
